# pythonPCEPtrainer

./: .gitignore  CONTRIBUTING.md  LICENSE  PCEP_Questions.json  PCEP_Questions.txt  README.md  bonus_lesson_code.py  pyproject.toml  python_tutor.py  python_tutor_gui.py  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
tests/: test_basic.py  test_tutor.py
